--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "DjMobileGarage": {
+    "DjMobileGarages": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/DjMobileGarage",
+            "outputPath": "dist/DjMobileGarages",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,12 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
-            "scripts": [
-             
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -65,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "DjMobileGarage:build"
+            "browserTarget": "DjMobileGarages:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "DjMobileGarage:build:production"
+              "browserTarget": "DjMobileGarages:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DjMobileGarage:build"
+            "browserTarget": "DjMobileGarages:build"
           }
         },
         "test": {
@@ -91,7 +88,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -114,19 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "DjMobileGarage:serve"
+            "devServerTarget": "DjMobileGarages:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "DjMobileGarage:serve:production"
+              "devServerTarget": "DjMobileGarages:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "DjMobileGarage",
+  "defaultProject": "DjMobileGarages",
   "cli": {
-    "analytics": false
+    "analytics": "8c3cc72f-37a6-4a8f-9f92-04448427d2cf"
   }
 }
